# ai-dial-rag

./: .dockerignore  .env.example  .gitignore  .ort.yml  Dockerfile  Dockerfile.colpali  Makefile  README.md  SECURITY.md  collect_repository_digest.py  download_model.py  generate_json_schema.py  noxfile.py  pyproject.toml  trivy.yaml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml
.github/workflows/: deploy-development.yml  deploy_dev.yml  pr-title-check.yml  pr.yml  release.yml  slash-command-dispatch.yml
aidial_rag/: aidial_to_langchain.py  app.py  app_config.py  attachment_link.py  base_config.py  batched.py  commands.py  config_digest.py  configuration_endpoint.py  content_stream.py  converter.py  dial_api_client.py  dial_config.py  dial_user_limits.py  document_loaders.py  document_loading_error.py  document_record.py  documents.py  error_types.py  errors.py  index_mime_type.py  index_record.py  index_storage.py  indexing_api.py  indexing_config.py  indexing_results.py  indexing_task.py  keywords_search.py  llm.py  log_config.py  main.py  print_stats.py  qa_chain.py  qa_chain_config.py  query_chain.py  repository_digest.py  request_context.py  resource_counter.py  retireval_chain.py  retrieval_api.py  (+5 more)
aidial_rag/embeddings/: detect_device.py  embeddings.py  multimodal_embeddings.py
aidial_rag/image_processor/: base64.py  document_image_extractor.py  extract_pages.py  image_page_image_extractor.py  pdf_page_image_extractor.py  resize.py
aidial_rag/resources/: colpali_model_resource.py  cpu_pools.py  dial_limited_resources.py
aidial_rag/retrievers/: all_documents_retriever.py  async_retriever.py  bm25_retriever.py  embeddings_index.py  embeddings_metrics.py  multimodal_retriever.py  page_image_retriever_utils.py  semantic_retriever.py
config/: aws_description.yaml  aws_embedding.yaml  azure_colpali.yaml  azure_colsmol256m.yaml  azure_description.yaml  azure_embedding.yaml  azure_with_gcp_embedding.yaml  gcp_description.yaml  gcp_embedding.yaml
docker_compose_local/: docker-compose.yml
docs/: api.md  configuration.generated.schema.json  indexing_api_example.ipynb  indexing_response.generated.schema.json  retrieval_api_example.ipynb  retrieval_response.generated.schema.json  retrieval_results.generated.schema.json
eval/: eval_retriever.py
eval/data/: ATTRIBUTION.md  alps_ground_truth_mixtral_v2.parquet
tests/: test_app.py  test_app_config.py  test_app_errors.py  test_app_indexing.py  test_app_retrieval.py  test_app_storage.py  test_attachment_link.py  test_attachment_stored.py  test_colpali_e2e.py  test_colpali_retriever.py  test_commands.py  test_configuration_endpoint.py  test_cpu_pools.py  test_description_retriever.py  test_e2e_test.py  test_embeddings_index.py  test_embeddings_metrics.py  test_extract_pages.py  test_image_extractor.py  test_load_documents.py  test_multimodal_retriever.py  test_reference_documents.py  test_retrievers.py  test_system_prompt_override.py
tests/config/: system_template_dog.yaml
tests/data/: ATTRIBUTION.md  alps_wiki.html  test_file.csv  test_image.tiff  test_presentation.doc  (+6 more)
(+33 files in other folders)
